# ann-star-galaxy-classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/sgc/: __init__.py  core.py  networks.py
