[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgc"
version = "0.0.0"
readme = "README.md"
description = "Star/galaxy classification with Artificial Neural Networks."

keywords = ["sgc"]
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese",
    "Programming Language :: Python :: 3.8",
]

dependencies = [
    "gdown==4.6.0",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "opencv-contrib-python==4.9.0.80",
    "torch==2.1.2",
    "torchmetrics==1.3.0",
    "torchvision==0.16.2",
    "tqdm==4.66.1",
]

[project.urls]
repository = "https://github.com/moesio-f/ann-star-galaxy-classification"

[tool.setuptools.packages.find]
where = ["src"]
